Fixed some HTML typos
I made these changes locally on GitHub since I haven't been able to access my remote repo through the CLI.

--- a/experience.html
+++ b/experience.html
@@ -10,12 +10,14 @@
     <link href="https://fonts.googleapis.com/css2?family=Catamaran:wght@500&display=swap" rel="stylesheet">
     <title>Experience</title>
 </head>
-<head>
+
+<body>
+<header>
     <h1>This Section is a Work In Progress</h1>
     <h1 class="display-1"><b>Nick Huemmer</b></h1>
     <h2 class="display-2">Work Experience</h2>
-</head>
-<body>
+</header>
+
     <div class="container-fluid">
         
         <div class="workplace container">
