--- a/experience.html
+++ b/experience.html
@@ -13,7 +13,7 @@
 
 <body>
 <header>
-    <h1>This Section is a Work In Progress</h1>
+    <h1>This Section is a Work In Progress- Bootstrap CV</h1>
     <h1 class="display-1"><b>Nick Huemmer</b></h1>
     <h2 class="display-2">Work Experience</h2>
 </header>
