--- a/experience.html
+++ b/experience.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/styles-experience.css">
-    <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css2?family=Audiowide&display=swap" rel="stylesheet"> 
     <link href="https://fonts.googleapis.com/css2?family=Catamaran:wght@500&display=swap" rel="stylesheet">
     <title>Experience</title>
@@ -13,9 +13,11 @@
 
 <body>
 <header>
-    <h1>This Section is a Work In Progress- Bootstrap CV</h1>
-    <h1 class="display-1"><b>Nick Huemmer</b></h1>
-    <h2 class="display-2">Work Experience</h2>
+    <div class="jumbotron">
+        <h1>This Section is a Work In Progress- Bootstrap CV</h1>
+        <h1 class="display-1"><b>Nick Huemmer</b></h1>
+        <h2 class="display-2">Work Experience</h2>
+    </div>
 </header>
 
     <div class="container-fluid">
