add work experience, Bootstrap formatting and navigation

--- a/experience.html
+++ b/experience.html
@@ -12,16 +12,43 @@
 </head>
 
 <body>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="#">Nick Huemmer</a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="#">Home</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Link</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+              </li>
+            </ul>
+            <form class="d-flex">
+              <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+              <button class="btn btn-outline-success" type="submit">Search</button>
+            </form>
+          </div>
+        </div>
+      </nav>
 <header>
     <div class="jumbotron">
-        <h1>This Section is a Work In Progress- Bootstrap CV</h1>
+        <h1 class="display-1">This Section is a Work In Progress- CV</h1>
+        <br/>
         <h1 class="display-1"><b>Nick Huemmer</b></h1>
-        <h2 class="display-2">Work Experience</h2>
     </div>
+    <br/>
 </header>
 
     <div class="container-fluid">
-        
+        <h2 class="display-2">Work Experience</h2>
+        <hr/>
         <div class="workplace container">
             <h1>Front End Web Development - Treehouse</h1>
             <h2>Student</h2>
@@ -46,6 +73,93 @@
                 <li>Helped clients find their own solutions to healthier lifestyles</li>
             </ul>
         </div>
+
+        <div class="workplace container">
+            <h1>Clif Bar & Company</h1>
+            <h2>Senior Product Developer</h2>
+            <h3>October 2019 - Present</h3>
+            <p>Practice focused on helping men lose fat and achieve healthy body weight while gaining strength and improving mobility flexibility </p>
+            <ul class="duties">
+                <li>Coached clients with weight loss, most lost 25+ lbs of body fat</li>
+                <li>Built simple, effective and sustainable exercise programs tailored to each client</li>
+                <li>Helped clients find their own solutions to healthier lifestyles</li>
+            </ul>
+        </div>
+
+        <div class="workplace container">
+            <h1>Clorox</h1>
+            <h2>Scientist II</h2>
+            <h3>October 2019 - Present</h3>
+            <p>Practice focused on helping men lose fat and achieve healthy body weight while gaining strength and improving mobility flexibility </p>
+            <ul class="duties">
+                <li>Coached clients with weight loss, most lost 25+ lbs of body fat</li>
+                <li>Built simple, effective and sustainable exercise programs tailored to each client</li>
+                <li>Helped clients find their own solutions to healthier lifestyles</li>
+            </ul>
+        </div>
+
+        <div class="workplace container">
+            <h1>Nestle Pizza Division</h1>
+            <h2>Scientist</h2>
+            <h3>October 2019 - Present</h3>
+            <p>Practice focused on helping men lose fat and achieve healthy body weight while gaining strength and improving mobility flexibility </p>
+            <ul class="duties">
+                <li>Coached clients with weight loss, most lost 25+ lbs of body fat</li>
+                <li>Built simple, effective and sustainable exercise programs tailored to each client</li>
+                <li>Helped clients find their own solutions to healthier lifestyles</li>
+            </ul>
+        </div>
+
+        <div class="workplace container">
+            <h1>Kraft Foods</h1>
+            <h2>Scientist</h2>
+            <h3>October 2019 - Present</h3>
+            <p>Practice focused on helping men lose fat and achieve healthy body weight while gaining strength and improving mobility flexibility </p>
+            <ul class="duties">
+                <li>Coached clients with weight loss, most lost 25+ lbs of body fat</li>
+                <li>Built simple, effective and sustainable exercise programs tailored to each client</li>
+                <li>Helped clients find their own solutions to healthier lifestyles</li>
+            </ul>
+        </div>
+
+        <div class="workplace container">
+            <h1><a href="https://www.cvoils.com/">Columbus Vegetable Oils</a></h1>  
+            <h2>Quality Manager</h2>
+            <h3>October 2019 - Present</h3>
+            <p>Practice focused on helping men lose fat and achieve healthy body weight while gaining strength and improving mobility flexibility </p>
+            <ul class="duties">
+                <li>Coached clients with weight loss, most lost 25+ lbs of body fat</li>
+                <li>Built simple, effective and sustainable exercise programs tailored to each client</li>
+                <li>Helped clients find their own solutions to healthier lifestyles</li>
+            </ul>
+        </div>
+
+        <div class="workplace container">
+            <h1><a href="https://www.kerry.com/">Kerry Ingredients</a></h1>  
+            <h2>Scientist</h2>
+            <h3>October 2019 - Present</h3>
+            <p>Practice focused on helping men lose fat and achieve healthy body weight while gaining strength and improving mobility flexibility </p>
+            <ul class="duties">
+                <li>Coached clients with weight loss, most lost 25+ lbs of body fat</li>
+                <li>Built simple, effective and sustainable exercise programs tailored to each client</li>
+                <li>Helped clients find their own solutions to healthier lifestyles</li>
+            </ul>
+        </div>
+
+        <div class="workplace container">
+            <h1><a href="https://www.nestle.com/">Nestle Beverage Division</a></h1>  
+            <h2>Intern</h2>
+            <h3>October 2019 - Present</h3>
+            <p>Practice focused on helping men lose fat and achieve healthy body weight while gaining strength and improving mobility flexibility </p>
+            <ul class="duties">
+                <li>Coached clients with weight loss, most lost 25+ lbs of body fat</li>
+                <li>Built simple, effective and sustainable exercise programs tailored to each client</li>
+                <li>Helped clients find their own solutions to healthier lifestyles</li>
+            </ul>
+        </div>
+
+        
+
     </div>
 </body>
 </html>
