update portfolio site

--- a/portfolio/portfolio.html
+++ b/portfolio/portfolio.html
@@ -28,8 +28,8 @@
         
         <header class="student-bio">
             <img src="images/nickprosquare.jpg" alt="A professional photo of Nick" class="profilepic">
-            <p class="bio">I'm a front end web developer who loves the web, humane technology, science, the written word, conveying ideas and building new things.</p>
-            <p class="bio">I've recently completed the Front End Web Development TechDegree from <a href="https://teamtreehouse.com/">TreeHouse</a> and am mastering JavaScript.</p>
+            <p class="bio">I'm a web developer who loves the building and fixing things.</p>
+            <p class="bio">I've recently completed the Front End Web Development and Full Stack JavaScript TechDegrees from <a href="https://teamtreehouse.com/">TreeHouse</a>.</p>
         </header>
     </div>
     </div>
